crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__skills.snap
---
source: crates/character/src/background/cloistered_scholar.rs
expression: "CloisteredScholar::skills()"

---
- History
- Arcana
- Nature
- Religion

