crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__snapshot_addl_proficiences.snap
---
source: character/src/background/cloistered_scholar.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - Arcana
      - Nature
      - Religion
    - 1

