crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__snapshot_citations.snap
---
source: crates/character/src/background/cloistered_scholar.rs
expression: background.citations()

---
- - Scag
  - 146

