crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__snapshot_coins.snap
---
source: character/src/background/cloistered_scholar.rs
expression: background.coins()

---
- Gold
- 10

