crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__snapshot_display.snap
---
source: character/src/background/cloistered_scholar.rs
expression: background

---
Cloistered Scholar
