crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__snapshot_features.snap
---
source: crates/character/src/background/cloistered_scholar.rs
expression: background.features()

---
- title: Library Access
  citation:
    - Scag
    - 146

