crates/character/src/background/snapshots/character__background__cloistered_scholar__tests__snapshot_languages.snap
---
source: crates/character/src/background/cloistered_scholar.rs
expression: background.addl_languages()

---
- 2
- ~

